<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/dialog"
    android:id="@+id/idRLBSheet"
    >

    <TextView
        android:id="@+id/idTVVetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:padding="4dp"
        android:text="@string/veterinarian_name_BM"
        android:textColor="@color/maroon"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/idTVAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVVetName"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:padding="4dp"
        android:text="@string/address_BM"
        android:textColor="@color/maroon"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/idTVContact"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVAddress"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:padding="4dp"
        android:text="@string/contact_BM"
        android:textColor="@color/maroon"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/idTVMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVAddress"
        android:layout_toRightOf="@id/idTVContact"
        android:padding="4dp"
        android:text="@string/email_BM"
        android:textColor="@color/maroon"
        android:textSize="20sp" />


    <Button
        android:id="@+id/idBtnEdit"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVContact"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#FF9900"
        android:text="@string/edit_details_BM"
        android:textColor="@color/maroonHint" />


</RelativeLayout>