<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tit_updDetails"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/dark_orange"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/tit_updDetails"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tit_grpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/tit_grpName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/upd_grpName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/poppins"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/rounded_edittext"/>

    <TextView
        android:id="@+id/tit_grpImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/tit_grpImage"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/upd_grpImage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/rounded_edittext"/>

    <TextView
        android:id="@+id/tit_grpDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/tit_grpDetails"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/upd_grpDetails"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/rounded_edittext"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins"
        android:text="@string/btn_update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp" />

</LinearLayout>