<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditVeterinarian"
    android:background="@drawable/add_vet">

    <TextView
        android:id="@+id/txt_EV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/edit_veterinarian"
        android:textColor="#FF9017"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Name_EV"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_EV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/inputtxt"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name_AV"
        android:fontFamily="@font/poppins"
        android:inputType="textPersonName"
        android:textColor="@color/maroon"
        android:textColorHint="@color/maroonHint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_EV"
        app:layout_constraintVertical_bias="0.968" />

    <EditText
        android:id="@+id/address_EV"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Name_EV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/inputtxt"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/address_AV"
        android:fontFamily="@font/poppins"
        android:inputType="textPostalAddress"
        android:textColor="@color/maroon"
        android:textColorHint="@color/maroonHint"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Name_EV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_EV"
        app:layout_constraintVertical_bias="0.968" />

    <EditText
        android:id="@+id/contact_EV"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_below="@+id/address_EV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="57dp"
        android:background="@drawable/inputtxt"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/contact_number_AV"
        android:fontFamily="@font/poppins"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/maroon"
        android:textColorHint="@color/maroonHint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/Email_EV"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_below="@+id/contact_EV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="57dp"
        android:background="@drawable/inputtxt"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email_AV"
        android:fontFamily="@font/poppins"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/maroon"
        android:textColorHint="@color/maroonHint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email_EV"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/updateBtn_EV"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/poppins"
            android:text="@string/update_EdtVet"
            android:textColor="@color/maroon"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="187dp"
            tools:layout_editor_absoluteY="576dp" />

        <Button
            android:id="@+id/deleteBtn_EV"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/poppins"
            android:text="@string/delete_EdtVet"
            android:textColor="@color/maroon"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="187dp"
            tools:layout_editor_absoluteY="576dp" />

    </LinearLayout>


</RelativeLayout>