<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:background="@drawable/add_vet">

    <Button
        android:id="@+id/Btnlogout"
        android:layout_width="102dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/add_btn"
        android:text="@string/logout_btn"
        android:textColor="@color/maroon"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVmenu"
        android:layout_width="122dp"
        android:layout_height="103dp"
        android:layout_below="@+id/Btnlogout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="146dp"
        android:text="@string/menu"
        android:textColor="#FF9017"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btnlogout" />

    <Button
        android:id="@+id/vetList"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVmenu"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="113dp"
        android:background="@drawable/btn_style"
        android:text="@string/vetList"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/addVet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVmenu" />

    <Button
        android:id="@+id/addVet"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vetList"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="113dp"
        android:background="@drawable/btn_style"
        android:text="@string/add_veteBtn"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="349dp" />

    <Button
        android:id="@+id/dog_menu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addVet"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="113dp"
        android:text="ADD DOG DETAILS"
        android:background="@drawable/btn_style"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="349dp" />



</RelativeLayout>