<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVeterinarian"
    android:background="@drawable/add_vet">


    <Button
        android:id="@+id/BtnMenu"
        android:layout_width="102dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/add_btn"
        android:text="@string/menu_Add"
        android:textColor="@color/maroon"
        android:textSize="10sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_Av"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BtnMenu"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        android:text="@string/TV_AV"
        android:textColor="#FF9017"
        android:textSize="40sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Name_AV"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_Av"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/inputtxt"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name_AV"
        android:fontFamily="@font/poppins"
        android:inputType="textPersonName"
        android:textColor="@color/maroon"
        android:textColorHint="@color/maroonHint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Av"
        app:layout_constraintVertical_bias="0.968" />

    <EditText
        android:id="@+id/address_AV"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Name_AV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/inputtxt"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/address_AV"
        android:fontFamily="@font/poppins"
        android:inputType="textPostalAddress"
        android:textColor="@color/maroon"
        android:textColorHint="@color/maroonHint"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Name_AV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Av"
        app:layout_constraintVertical_bias="0.968" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_below="@+id/address_AV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="57dp"
        android:background="@drawable/inputtxt"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/contact_number_AV"
        android:fontFamily="@font/poppins"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/maroon"
        android:textColorHint="@color/maroonHint"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Email_AV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/Email_AV"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextPhone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="57dp"
        android:background="@drawable/inputtxt"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email_AV"
        android:fontFamily="@font/poppins"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/maroon"
        android:textColorHint="@color/maroonHint"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_AV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_AV"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/Email_AV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="140dp"
        android:background="@drawable/btn_style"
        android:text="@string/add_Btn"
        android:fontFamily="@font/poppins"
        android:textColor="@color/maroon"
        android:textSize="18sp"
        tools:ignore="TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="576dp" />


</RelativeLayout>

